fixed bug on paginatee query function
